--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home • Pink Portfolio</title>
+  <title>Projects • Pink Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
         <span>Hoang Xuan Dung</span>
       </div>
       <nav class="nav">
-          <a href="index.html" class="active">Home</a>
+          <a href="index.html" class="">Home</a>
           <a href="about.html" class="">About</a>
-          <a href="projects.html" class="">Projects</a>
+          <a href="projects.html" class="active">Projects</a>
           <a href="gallery.html" class="">Gallery</a>
           <a href="blog.html" class="">Blog</a>
           <a href="contact.html" class="">Contact</a>
@@ -29,42 +29,36 @@
   
 <section class="hero">
   <div class="container">
-    <h1 class="hero-title" data-reveal>Hello, I'm Hoang Xuan Dung.</h1>
-    <p class="hero-sub" data-reveal>
-      A developer/designer who loves clean UI, subtle motion, and pastel pink gradients.
-      This is a fresh multi‑page portfolio built with one CSS file.
-    </p>
-    <div class="hero-cta" data-reveal>
-      <a class="btn" href="projects.html">View Projects</a>
-      <a class="btn btn-outline" href="contact.html">Contact Me</a>
-    </div>
+    <h1 class="hero-title" data-reveal>Projects</h1>
+    <p class="hero-sub" data-reveal>Selected work — each project card links to a live demo or repository.</p>
   </div>
 </section>
 
-<section>
+<section class="projects">
   <div class="container">
-    <h2 class="section-title">Highlights</h2>
-    <p class="section-desc">A few things I enjoy working on: UI design, front‑end engineering, and data visualization.</p>
-    <div class="grid grid-3">
+    <div class="grid">
       <div class="card" data-reveal>
-        <img src="assets/img/ph1.svg" alt="UI Design">
+        <img src="assets/img/ph1.svg" alt="Project A">
         <div class="card-body">
-          <h3>UI/UX Design</h3>
-          <p>Designing clean, accessible, and delightful interfaces.</p>
+          <h3>Project A — Landing Page</h3>
+          <p>Minimal landing using Grid/Flex, optimized images, dark mode.</p>
+          <a class="btn" href="#">Demo</a>
         </div>
       </div>
       <div class="card" data-reveal>
-        <img src="assets/img/ph2.svg" alt="Front-end">
+        <img src="assets/img/ph2.svg" alt="Project B">
         <div class="card-body">
-          <h3>Front‑end Engineering</h3>
-          <p>Responsive layouts, modern CSS, and smooth interactions.</p>
+          <h3>Project B — Algo Visualizer</h3>
+          <p>Visualize sorting and graph algorithms. Clean controls, smooth animations.</p>
+          <a class="btn" href="#">Demo</a>
         </div>
       </div>
       <div class="card" data-reveal>
-        <img src="assets/img/ph3.svg" alt="Data Viz">
+        <img src="assets/img/ph3.svg" alt="Project C">
         <div class="card-body">
-          <h3>Data Visualization</h3>
-          <p>Turning complex data into intuitive visuals.</p>
+          <h3>Project C — Coffee Shop</h3>
+          <p>Menu, pricing, booking form, embedded map, and responsive layout.</p>
+          <a class="btn" href="#">Demo</a>
         </div>
       </div>
     </div>
